# IR2117

./: README.md  tb3.rviz
Cuadratica/: 1  cuadratica.cpp
Solve your math Problem/: 1  v1.cpp
Sum/: sum  sum.cpp  sum1  sum_ab.cpp
ros2_ws/src/examples/: CMakeLists.txt  package.xml
ros2_ws/src/examples/src/: publisher.cpp  subscriber.cpp
ros2_ws/src/sum/: CMakeLists.txt  package.xml
ros2_ws/src/sum/src/: sum.cpp
ros2_ws/src/triangles/: CMakeLists.txt  package.xml
ros2_ws/src/triangles/launch/: equilateral.launch.py  isosceles.launch.py  scalene.launch.py
ros2_ws/src/triangles/src/: equilateral.cpp  isosceles.cpp  scalene.cpp
tb3_ws/src/obstacles/: CMakeLists.txt  package.xml
tb3_ws/src/obstacles/src/: detector.cpp
tb3_ws/src/robot_trajectory/: CMakeLists.txt  package.xml
tb3_ws/src/robot_trajectory/launch/: square.launch.py
tb3_ws/src/robot_trajectory/src/: avoidance.cpp  detector.cpp  square.cpp  square_odom.cpp  wandering.cpp
